--- a/CSS/index.css
+++ b/CSS/index.css
@@ -42,9 +42,15 @@ header {
     float: left;
 }
 
-.header_logo h1 {
+.header_logo a {
+    width: 100%;
     height: 100%;
-    padding: 22px 5px;
+    text-decoration: none;
+}
+
+.header_logo h1 {
+    height: calc(100% - 22px);
+    padding-top: 22px;
     margin: 0 auto;
 
     font-family: 'PressStart-Regular';
@@ -55,8 +61,7 @@ header {
 
 nav {
     height: 100px;
-    position: relative;
-    left: 140px;
+    float: right;
 }
 
 header ul {
