--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,22 +2,23 @@
     font-family: 'PressStart-Regular';
     font-weight: 400;
 
-    src: url('../fonts/PressStart2P-Regular.ttf');
+    src: url(../fonts/PressStart2P-Regular.ttf);
 }
 
 @font-face {
     font-family: 'VT323-Regular';
     font-weight: 400;
 
-    src: url('../fonts/VT323-Regular.ttf');
+    src: url(../fonts/VT323-Regular.ttf);
 }
 
 html {
-    height: 100%;
+    height: 70vh;
 }
 
 body {
     width: 1250px;
+    height: 100%;
     margin: 0 auto;
     padding: 0;
 }
@@ -34,6 +35,7 @@ header {
     width: 100%;
     background: #8e908f;
     border-bottom: 2px solid black;
+    z-index: 2;
 }
 
 .header_logo {
@@ -115,27 +117,30 @@ nav a {
 main {
     background-color: #8e908f;
     min-height: calc(100vh - 175px);
-    height: 1px
+    height: 100%;
 }
 
 .main-window {
     height: 100%;
+    min-height: 600px;
+    min-width: 600px;
 }
 
 iframe {
+    position: relative;
     width: 100%;
     height: 100%;
     border: none;
+    z-index: 1;
 }
 
-
-/* -----------------FOOTER------------------ */
-
 footer {
+    position: relative;
     height: 70px;
     width: 100%;
     background-color: #2d3945;
     border-top: 2px solid black;
+    z-index: 2;
 }
 
 div {
