--- a/CSS/game.css
+++ b/CSS/game.css
@@ -1,15 +1,19 @@
 @font-face {
     font-family: 'PressStart-Regular';
-    font-weight: 400;
+    src: url('../Fonts/pressstart2p-regular-webfont.woff2') format('woff2'),
+    url('../Fonts/pressstart2p-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 
-    src: url('../fonts/PressStart2P-Regular.ttf');
 }
 
 @font-face {
     font-family: 'VT323-Regular';
-    font-weight: 400;
+    src: url('../Fonts/vt323-regular-webfont.woff2') format('woff2'),
+    url('../Fonts/vt323-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 
-    src: url('../fonts/VT323-Regular.ttf');
 }
 
 body {
@@ -44,7 +48,6 @@ body {
     height: 150px;
     display: inline-block;
     margin: 7px;
-    /*padding: 5px;*/
     font-size: 64px;
     cursor: pointer;
     text-align: center;
@@ -66,10 +69,12 @@ body {
 .card-face {
     height: 100%;
     width: 100%;
-    background: #111;
+    background-image: url(../Images/card_faces.png);
+    background-size: cover;
     backface-visibility: hidden;
     transform: rotateY(180deg);
     line-height: 150px;
+    color: white;
 }
 
 .timer {
